--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     
     <!-- Admin Panel Colors -->
     <color name="white_70">#B3FFFFFF</color>
+    <color name="white_50">#80FFFFFF</color>
     <color name="black_80">#CC000000</color>
     <color name="black_60">#99000000</color>
     <color name="admin_primary">#FF2196F3</color>
