--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -47,51 +47,51 @@
     </LinearLayout>
 
     <!-- Navigation Bar -->
-    <HorizontalScrollView
+    <LinearLayout
         android:id="@+id/navigationBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/black_60"
-        android:scrollbars="none"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/header">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/certificateButton"
+            style="@style/NavButtonStyle"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:text="Certificate"
+            android:drawableTop="@drawable/ic_lock" />
 
-            <Button
-                android:id="@+id/connectionButton"
-                style="@style/NavButtonStyle"
-                android:text="Connection"
-                android:drawableTop="@drawable/ic_wifi" />
+        <Button
+            android:id="@+id/hardwareButton"
+            style="@style/NavButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Hardware"
+            android:drawableTop="@drawable/ic_settings" />
 
-            <Button
-                android:id="@+id/certificateButton"
-                style="@style/NavButtonStyle"
-                android:text="Certificate"
-                android:drawableTop="@drawable/ic_lock" />
+        <Button
+            android:id="@+id/logsButton"
+            style="@style/NavButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Logs"
+            android:drawableTop="@drawable/ic_list" />
 
-            <Button
-                android:id="@+id/hardwareButton"
-                style="@style/NavButtonStyle"
-                android:text="Hardware"
-                android:drawableTop="@drawable/ic_settings" />
+        <Button
+            android:id="@+id/systemButton"
+            style="@style/NavButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="System"
+            android:drawableTop="@drawable/ic_system" />
 
-            <Button
-                android:id="@+id/logsButton"
-                style="@style/NavButtonStyle"
-                android:text="Logs"
-                android:drawableTop="@drawable/ic_list" />
-
-            <Button
-                android:id="@+id/systemButton"
-                style="@style/NavButtonStyle"
-                android:text="System"
-                android:drawableTop="@drawable/ic_system" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
+    </LinearLayout>
 
     <!-- Fragment Container -->
     <FrameLayout
