--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -146,7 +146,7 @@
                     android:textColor="@color/white_70"
                     android:textSize="14sp" />
 
-                <Switch
+                <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/realTimeToggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
