--- a/app/src/main/res/layout/activity_sms_verify.xml
+++ b/app/src/main/res/layout/activity_sms_verify.xml
@@ -431,14 +431,17 @@
         android:focusable="true"
         android:elevation="12dp">
 
-        <!-- 3D Sphere background with pressed state -->
-        <View
+        <!-- 3D Sphere background with pressed state (now using PNG) -->
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@drawable/sphere_button_selector"
-            android:duplicateParentState="true"/>
+            android:src="@drawable/sphere_button_selector"
+            android:scaleType="fitCenter"
+            android:duplicateParentState="true"
+            android:contentDescription="Help button"/>
 
+        <!-- Question mark text - hide if PNG already includes it -->
         <TextView
             android:id="@+id/questionMarkIcon"
             android:layout_width="wrap_content"
@@ -451,7 +454,8 @@
             android:shadowColor="#40000000"
             android:shadowDx="0"
             android:shadowDy="2"
-            android:shadowRadius="4"/>
+            android:shadowRadius="4"
+            android:visibility="gone"/>
 
     </FrameLayout>
 
