--- a/app/src/main/res/layout/activity_sms_verify.xml
+++ b/app/src/main/res/layout/activity_sms_verify.xml
@@ -499,6 +499,16 @@
 
             </RelativeLayout>
 
+            <!-- FAQ Image -->
+            <ImageView
+                android:id="@+id/faqImage"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:src="@drawable/faq"
+                android:contentDescription="FAQ Icon"
+                android:layout_marginBottom="32dp"
+                android:scaleType="fitCenter"/>
+
             <!-- Modal Message - FAQ Format -->
             <LinearLayout
                 android:layout_width="match_parent"
